--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="img/#.ico">
     <link rel="stylesheet" href="/css/all.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Website With Dark Theme</title>
 </head>
 
 <body>
-    <div class="container ">
 
 
-    </div>
 </body>
 
 </html>
