--- a/index.html
+++ b/index.html
@@ -12,7 +12,50 @@
 </head>
 
 <body>
+    <div class="container">
+        <div class="navbar">
+            <img src="img/logo.png" class="logo">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Portfolio</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">For Hire</a></li>
+                    </ul>
+                </nav>
 
+            <img src="img/moon.png" id="icon">
+
+        </div>
+            <div class="content">
+                <h1>I'm a
+                    <br>
+                    <span class="style">FullStack Developer</span></h1>
+                <p>
+                    I'm a Self Taught Developer, FullStack Developer, Freelancer,
+                    <br>
+                    Content Creator, YouTuber, and Influencer.
+                </p>
+                <div class="text">
+                    <button class="btn">Download Resume</button>
+                    <div class="social-media">
+                        <a href=""><i class="fab fa-github"></i></a>
+                        <a href=""><i class="fab fa-linkedin"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+
+                <img src="img/bg.png" class="image">
+
+            </div>
+
+    </div>
+
+    <script src="app.js">
+
+    </script>
 
 </body>
 
